--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
                     <li><i class="fas fa-check check"></i> دخول البوت بـ ID</li>
                     <li><i class="fas fa-check check"></i> دخول اللاعب في TX Admin</li>
                     <li><i class="fas fa-times times"></i> هل يبان البوت للاعبين في اللعبة</li>
-                    <li><i class="fas fa-times times"></i> هل يوجد ميزة تغيير الأسماء</li>
+                    <li><i class="fas fa-check check"></i> هل يوجد ميزة تغيير الأسماء</li>
                     <li><i class="fas fa-check check"></i> هل يبان في لوحة فايف إم من الخارج</li>
                     <li><i class="fas fa-times times"></i> هل يوجد لوحة تحكم</li>
                     <li><i class="fas fa-check check"></i> سرعة بدخول السيرفر</li>
